# WeatherAI

./: .gitignore  CHANGELOG_HOTFIX_v0.1.1.md  MORNING_DIGEST_IMPLEMENTATION.md  PULL_REQUEST_TEMPLATE.md  README.md  TROUBLESHOOTING.md  cache-fallback-issues.md  copilot-instructions.md  docker-compose.yml  package.json
backend/: .env.example  Dockerfile  Makefile  PHASE_3C_SUMMARY.md  alembic.ini  entrypoint.sh  mypy.ini  pyproject.toml  test_enhanced_digest.py
backend/ai/: __init__.py
backend/ai/builders/: __init__.py  digest_prompt_builder.py
backend/ai/llm/: __init__.py  azure_client.py
backend/ai/prompts/: __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 17defa11d80e_add_llm_audit_feature_flags.py  20250825_0001_initial_schema.py  20250825_0002_add_digest_audit.py  20250825_0003_add_rag_tables.py  20250826_0004_move_rag_to_schema.py  24d3fcd30cb4_add_analytics_tables.py  590348c0b8b5_initial_postgresql_schema_baseline_.py  742fe8dc4791_initial_migration_existing_tables.py  8a9f5e3d2b1c_add_cascade_delete_constraints.py  a9557239bffe_add_ingestion_tables_provider_run_air_.py  add_location_groups_add_location_groups.py  e86d3cc9215f_initial_schema_reset.py  e8b9c4e5f2a3_add_user_profiles_and_preferences_tables.py  ec60fa052f34_merge_heads.py
backend/app/: __init__.py  __main__.py  main.py  manage.py
backend/app/api/: dependencies.py  error_handlers.py
backend/app/application/: __init__.py  event_bus.py  rag_use_cases.py  weather_use_cases.py
backend/app/cache/: __init__.py  digest_cache.py
backend/app/core/: config.py  constants.py  datetime_utils.py  exception_handlers.py  exceptions.py  hashing.py  logging.py  metrics.py  middleware.py  redis_client.py  settings.py  tracing.py
backend/app/db/: bootstrap.py  database.py  models.py  repositories.py
backend/app/domain/: __init__.py  events.py  exceptions.py  value_objects.py  weather_calculations.py
backend/app/ingest/: __init__.py  astronomy_service.py  orchestrator.py
backend/app/metrics/: __init__.py  (+1 more)
backend/docs/: DEVELOPMENT.md  INGESTION_ARCHITECTURE.md  config.md
backend/scripts/: seed_basic.py  seed_demo_data.py  seed_forecast_cache.py
backend/tools/: check_env_example.py
(+399 files in other folders)
