[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherai-backend"
version = "0.1.0"
description = "WeatherAI Backend - FastAPI + PostgreSQL + OpenAI LLM"
authors = [
    {name = "WeatherAI Team", email = "team@weatherai.example.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "email-validator>=1.3.0",                                    
    "redis>=5.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "httpx>=0.25.2",
    "openai>=1.3.0",
    "apscheduler>=3.10.4",
    "structlog>=23.2.0",
    "astral>=2.3.0",
    "python-multipart>=0.0.20",
    "numpy>=2.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "mypy>=1.7.1",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "types-redis>=4.6.0.11",
    "types-passlib>=1.7.7.13",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "structlog.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"